ready to release beta.3

--- a/src/Stars.Data.Tests/Resources/DMC/UKDMC2/charter_item_single_tiff.ipynb
+++ b/src/Stars.Data.Tests/Resources/DMC/UKDMC2/charter_item_single_tiff.ipynb
@@ -271,7 +271,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'AB0009e5_001_MUL_L1T',\n",
        " 'properties': {'datetime': '2020-03-14T01:27:20Z',\n",
        "  'start_datetime': '2020-03-14T01:27:20Z',\n",
