--- a/src/Stars.Data.Tests/Resources/CONAE/SAOCOM-1/L1D/data/S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514/saocom-1.ipynb
+++ b/src/Stars.Data.Tests/Resources/CONAE/SAOCOM-1/L1D/data/S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514/saocom-1.ipynb
@@ -795,7 +795,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        " 'properties': {'item_id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        "  'mission': 'saocom-1',\n",
@@ -914,7 +914,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        " 'properties': {'item_id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        "  'mission': 'saocom-1',\n",
@@ -1028,7 +1028,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        " 'properties': {'item_id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        "  'mission': 'saocom-1',\n",
@@ -1121,7 +1121,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        " 'properties': {'item_id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        "  'mission': 'saocom-1',\n",
@@ -1210,7 +1210,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        " 'properties': {'item_id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        "  'mission': 'saocom-1',\n",
@@ -1302,7 +1302,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        " 'properties': {'item_id': 'S1A_OPER_SAR_EOSSP__CORE_L1D_OLVF_20200819T231514',\n",
        "  'mission': 'saocom-1',\n",
