--- a/src/Stars.Data.Tests/Resources/DMC/UKDMC2/L1T/charter_item_UKDMCii.ipynb
+++ b/src/Stars.Data.Tests/Resources/DMC/UKDMC2/L1T/charter_item_UKDMCii.ipynb
@@ -524,7 +524,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'U200a421_000000_015499_p_L1T',\n",
        " 'properties': {'gsd': 22.0,\n",
        "  'proj:epsg': 'EPSG:32651',\n",
@@ -717,7 +717,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'U200a421_000000_015499_p_L1T',\n",
        " 'properties': {'gsd': 22.0,\n",
        "  'proj:epsg': 'EPSG:32651',\n",
