--- a/src/Stars.Data.Tests/Resources/KARI/KOMPSAT-5/L1D/kompsat-5.ipynb
+++ b/src/Stars.Data.Tests/Resources/KARI/KOMPSAT-5/L1D/kompsat-5.ipynb
@@ -809,7 +809,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'KMPS5_GTC_B_ES_10_HH_RD_P_20190916093251_20190916093256_20190918030009',\n",
        " 'properties': {'item_id': 'KMPS5_GTC_B_ES_10_HH_RD_P_20190916093251_20190916093256_20190918030009',\n",
        "  'mission': 'kompsat-5',\n",
@@ -895,7 +895,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'KMPS5_GTC_B_ES_10_HH_RD_P_20190916093251_20190916093256_20190918030009',\n",
        " 'properties': {'item_id': 'KMPS5_GTC_B_ES_10_HH_RD_P_20190916093251_20190916093256_20190918030009',\n",
        "  'mission': 'kompsat-5',\n",
@@ -984,7 +984,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'KMPS5_GTC_B_ES_10_HH_RD_P_20190916093251_20190916093256_20190918030009',\n",
        " 'properties': {'item_id': 'KMPS5_GTC_B_ES_10_HH_RD_P_20190916093251_20190916093256_20190918030009',\n",
        "  'mission': 'kompsat-5',\n",
