--- a/src/Stars.Data.Tests/Resources/NASA/LANDSAT8/STAC_Item_landsat-8_FINAL.ipynb
+++ b/src/Stars.Data.Tests/Resources/NASA/LANDSAT8/STAC_Item_landsat-8_FINAL.ipynb
@@ -900,7 +900,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'LC80330352013157LGN00',\n",
        " 'properties': {'datetime': '2013-06-06T22:09:28Z',\n",
        "  'gsd': 15.0,\n",
