--- a/src/Stars.Data.Tests/Resources/NASA/LANDSAT8/STAC_Item_landsat-8_draft1.ipynb
+++ b/src/Stars.Data.Tests/Resources/NASA/LANDSAT8/STAC_Item_landsat-8_draft1.ipynb
@@ -1466,7 +1466,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'LC80330352013157LGN00',\n",
        " 'properties': {'MAP_PROJECTION': 'UTM',\n",
        "  'DATUM': 'WGS84',\n",
