--- a/src/Stars.Data.Tests/Resources/ROSCOSMOS/KANOPUS-V/IK/Kanopus-V-IK-MSS_PSS.ipynb
+++ b/src/Stars.Data.Tests/Resources/ROSCOSMOS/KANOPUS-V/IK/Kanopus-V-IK-MSS_PSS.ipynb
@@ -841,7 +841,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'KVIK_19382_19377_02_3NP2_07_ORT',\n",
        " 'properties': {'processing:level': '2B',\n",
        "  'datetime': '2021-01-10T15:56:07Z',\n",
