--- a/src/Stars.Data.Tests/Resources/ROSCOSMOS/KANOPUS-V/V3/Kanopus-V3.ipynb
+++ b/src/Stars.Data.Tests/Resources/ROSCOSMOS/KANOPUS-V/V3/Kanopus-V3.ipynb
@@ -820,7 +820,7 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'stac_version': '1.0.0-beta.2',\n",
+       " 'stac_version': '1.0.0-beta3',\n",
        " 'id': 'KV3_16300_16298_01_3NP2_20_ORT',\n",
        " 'properties': {'processing:level': '2B',\n",
        "  'datetime': '2021-01-09T15:54:00Z',\n",
